// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hosted-zone-with-param for different region 1`] = `
Object {
  "Outputs": Object {
    "HostedZoneIdFC741845": Object {
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneNameservers0897D4B3": Object {
      "Value": Object {
        "Fn::Join": Array [
          ", ",
          Object {
            "Fn::GetAtt": Array [
              "HostedZoneA9DD9B89",
              "NameServers",
            ],
          },
        ],
      },
    },
  },
  "Resources": Object {
    "HostedZoneA9DD9B89": Object {
      "Properties": Object {
        "Name": "example.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
    "HostedZoneIdParamE55EE91C": Object {
      "Properties": Object {
        "Name": "/cf/hosted-zone-id/example.com-public",
        "Type": "String",
        "Value": Object {
          "Ref": "HostedZoneA9DD9B89",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`hosted-zone-with-param for different region 2`] = `
Object {
  "Outputs": Object {
    "HostedZoneId": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "HostedZoneParam13DE3CEA",
          "Parameter.Value",
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccArtifactHashA58B31E8": Object {
      "Description": "Artifact hash for asset \\"f883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50cc\\"",
      "Type": "String",
    },
    "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccS3BucketA67797D4": Object {
      "Description": "S3 bucket for asset \\"f883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50cc\\"",
      "Type": "String",
    },
    "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccS3VersionKeyD2C3FB42": Object {
      "Description": "S3 key for asset version \\"f883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50cc\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleDefaultPolicyD28E1A5E",
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccS3BucketA67797D4",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccS3VersionKeyD2C3FB42",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf883e12689f8357ff04376b1abab555e2b18f9992e78242d504a2c4d74bb50ccS3VersionKeyD2C3FB42",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleDefaultPolicyD28E1A5E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:eu-west-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cf/hosted-zone-id/example.com-public",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleDefaultPolicyD28E1A5E",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HostedZoneParam13DE3CEA": Object {
      "DeletionPolicy": "Delete",
      "Metadata": Object {
        "Nonce": "1",
      },
      "Properties": Object {
        "Create": Object {
          "action": "getParameter",
          "parameters": Object {
            "Name": "/cf/hosted-zone-id/example.com-public",
          },
          "physicalResourceId": Object {
            "id": "/cf/hosted-zone-id/example.com-public",
          },
          "region": "eu-west-1",
          "service": "SSM",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": Object {
          "action": "getParameter",
          "parameters": Object {
            "Name": "/cf/hosted-zone-id/example.com-public",
          },
          "physicalResourceId": Object {
            "id": "/cf/hosted-zone-id/example.com-public",
          },
          "region": "eu-west-1",
          "service": "SSM",
        },
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`hosted-zone-with-param for same region 1`] = `
Object {
  "Outputs": Object {
    "ExportsOutputRefHostedZoneA9DD9B896D7C4880": Object {
      "Export": Object {
        "Name": "Stack1:ExportsOutputRefHostedZoneA9DD9B896D7C4880",
      },
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneIdFC741845": Object {
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneNameservers0897D4B3": Object {
      "Value": Object {
        "Fn::Join": Array [
          ", ",
          Object {
            "Fn::GetAtt": Array [
              "HostedZoneA9DD9B89",
              "NameServers",
            ],
          },
        ],
      },
    },
  },
  "Resources": Object {
    "HostedZoneA9DD9B89": Object {
      "Properties": Object {
        "Name": "example.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
    "HostedZoneIdParamE55EE91C": Object {
      "Properties": Object {
        "Name": "/cf/hosted-zone-id/example.com-public",
        "Type": "String",
        "Value": Object {
          "Ref": "HostedZoneA9DD9B89",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`hosted-zone-with-param for same region 2`] = `
Object {
  "Outputs": Object {
    "HostedZoneId": Object {
      "Value": Object {
        "Fn::ImportValue": "Stack1:ExportsOutputRefHostedZoneA9DD9B896D7C4880",
      },
    },
  },
}
`;
